--- a/public/locales/zh/projects/_common.json
+++ b/public/locales/zh/projects/_common.json
@@ -1,6 +1,7 @@
 {
   "sourceCode": "原始碼",
   "storeLink": "商店",
-  "projectDemo": "專案展示"
+  "projectDemo": "專案展示",
+  "keyContributions": "核心貢獻"
 }
 
