--- a/public/locales/zh/projects/berify.json
+++ b/public/locales/zh/projects/berify.json
@@ -1,21 +1,146 @@
 {
   "shortDesc": "協助商家管理商品與會員，透過 Web3 提供可驗證的數位資產與行銷工具。",
-  "technologies": ["React Native", "Swift App Clips", "Next.js", "Web3"],
+  "technologies": ["React Native", "Swift App Clips", "Next.js", "Node.js", "Prisma", "Shopify API", "Web3"],
   "role": "核心開發 · React Native 主應用",
   "achievements": [],
   "fullDesc": "Web3 智慧零售完整生態系統。商家透過後台管理與分析商品，消費者掃描產品標籤以解鎖商品資訊、特別促銷、NFT 和贈品功能，並整合第三方錢包查看資產。\n\n技術棧：React Native 主應用、Swift App Clips 掃描功能、Next.js 後端伺服器與完整 CMS。",
   "detail": {
     "hero": {
       "title": "Berify",
-      "tagline": "Web3 智慧零售生態系統"
+      "tagline": "Web3 賦能的 O2O 智慧零售平台",
+      "description": "連接實體商品與數位資產的商業級 Web3 解決方案。透過 NFC 驗證與行銷自動化，打造完整的線上線下零售生態系。",
+      "badge": "任職時間：1.5 年（2023 - 2024）",
+      "statusBadge": "正式上線中"
+    },
+    "context": {
+      "title": "🌐 專案背景",
+      "description": "Berify 是一個 Web3 賦能的 O2O 零售生態系統，具備 NFC 驗證與行銷自動化功能。系統採用分散式架構：",
+      "architecture": [
+        { "name": "Main Web", "tech": "Next.js", "desc": "主要後端與 CMS" },
+        { "name": "Task Queue", "tech": "Node.js", "desc": "非同步任務處理" },
+        { "name": "WebSocket", "tech": "Socket.io", "desc": "即時通知" }
+      ]
     },
     "overview": {
-      "duration": "1 年",
-      "team": "核心開發",
+      "duration": "任職時間：1.5 年（2023 - 2024）",
+      "team": "核心開發（全端）",
       "projectType": "商業產品",
-      "mainTechs": ["React Native", "Swift App Clips", "Next.js", "Web3"],
-      "platforms": ["Android", "iOS", "Web"]
-    }
+      "mainTechs": ["React Native", "Next.js", "Node.js", "Prisma", "Shopify API", "Socket.io"],
+      "platforms": ["iOS", "Android", "Web"]
+    },
+    "metrics": {
+      "title": "📊 專案規模指標",
+      "items": [
+        { "value": "114", "label": "DB Migrations", "desc": "資料庫版本遷移" },
+        { "value": "34", "label": "API Modules", "desc": "後端 API 模組" },
+        { "value": "10+", "label": "Integrations", "desc": "第三方服務整合" }
+      ]
+    },
+    "challenges": [
+      {
+        "title": "大規模 Schema 工程",
+        "badge": "114 Migrations",
+        "achievement": "管理 **114 次資料庫遷移**，設計包含 **50+ 資料表**的核心 Schema",
+        "details": [
+          "使用 Prisma/MySQL 實作複雜關聯結構",
+          "NFT 鑄造與產品綁定的資料模型",
+          "Shopify 商品同步與庫存追蹤",
+          "多層級商家角色與權限系統"
+        ],
+        "icon": "🗄️"
+      },
+      {
+        "title": "高可靠微服務",
+        "badge": "Berify-Queue",
+        "achievement": "設計並實作 **Berify-Queue** 服務，處理非同步推播通知與 NFT 分配任務",
+        "details": [
+          "狀態機模式：waiting → processing → processed",
+          "確保任務原子性，防止重複執行",
+          "支援推播排程與批次處理",
+          "錯誤重試與死信佇列機制"
+        ],
+        "icon": "⚙️"
+      },
+      {
+        "title": "生態系互通性",
+        "badge": "Shopify & Web3",
+        "achievement": "建立與 **Shopify API** (O2O 電商) 及 **Arbitrum Nova** (NFT 自動分發) 的深度整合",
+        "details": [
+          "Shopify 折扣碼生成與兌換流程",
+          "AWS SNS 跨平台推播整合",
+          "Socket.io 即時商家通知",
+          "Web3 錢包連接與 NFT 領取"
+        ],
+        "icon": "🔗"
+      }
+    ],
+    "performance": {
+      "title": "📱 前端效能優化",
+      "description": "除了後端系統開發，同時負責 React Native App 的效能調校",
+      "method": "使用 **Android Studio Profiler** 進行記憶體與渲染分析",
+      "result": "降低記憶體佔用，提升渲染效能 **10-15%**"
+    },
+    "architectureFlow": {
+      "title": "🏗️ 系統架構流程",
+      "nodes": {
+        "app": { "label": "Consumer App", "tech": "React Native" },
+        "merchant": { "label": "Merchant Dashboard", "tech": "Next.js" },
+        "web": { "label": "Main Backend", "tech": "Next.js API" },
+        "queue": { "label": "Task Queue", "tech": "Node.js" },
+        "db": { "label": "Database", "tech": "MySQL" },
+        "shopify": { "label": "Shopify", "tech": "REST API" },
+        "sns": { "label": "AWS SNS", "tech": "Push" },
+        "web3": { "label": "Arbitrum Nova", "tech": "NFT" }
+      },
+      "flows": [
+        "App → Web: 產品驗證 / 獎勵領取",
+        "Merchant → Web: 產品管理 / 活動設定",
+        "Web → Queue: 非同步任務派發",
+        "Queue → SNS: 推播通知",
+        "Queue → Web3: NFT 鑄造",
+        "Web → Shopify: 折扣同步"
+      ]
+    },
+    "gallery": {
+      "tabs": {
+        "consumerApp": "消費者體驗",
+        "merchantDashboard": "商家管理"
+      },
+      "consumerApp": {
+        "home": { "title": "首頁", "desc": "NFC 產品驗證入口：透過感應 NFC 標籤即時啟動產品驗證流程。" },
+        "productDetail": { "title": "產品詳情", "desc": "數位資產與詳情：查看產品資訊與掛載的 NFT 資產。" },
+        "productDetailChat": {
+          "title": "品牌互動",
+          "desc": "品牌即時互動：透過 WebSocket 實作與品牌方的即時互動聊天室。"
+        },
+        "rewards": { "title": "獎勵中心", "desc": "Shopify 獎勵同步：整合點數系統並自動同步 Shopify 商店折扣碼。" },
+        "rewardsDetail": {
+          "title": "獎勵詳情",
+          "desc": "獎勵兌換詳情：查看獎勵詳細說明，並將累積點數兌換為實體商店或 Shopify 的專屬折扣碼。"
+        },
+        "notifications": { "title": "通知中心", "desc": "個人化推播中心：由 AWS SNS 驅動的活動通知與產品動態推播。" },
+        "profile": {
+          "title": "個人檔案",
+          "desc": "個人帳戶中心：管理用戶資訊、安全設定，並整合個人收藏與掃描偏好設定。"
+        },
+        "scanHistory": { "title": "掃描紀錄", "desc": "足跡與收藏：記錄所有曾互動過的產品標籤與驗證歷程。" }
+      },
+      "merchantDashboard": {
+        "inventory": { "title": "庫存管理", "desc": "產品標籤庫存管理：管理商家旗下所有實體商品對應的數位標籤。" },
+        "experience": { "title": "體驗管理", "desc": "體驗與分店管理：配置跨分店的商品互動內容與數位體驗邏輯。" },
+        "experienceDetail": {
+          "title": "體驗詳情",
+          "desc": "數位體驗客製化詳情：細粒度配置標籤掃描後的互動邏輯，包含自訂動畫、促銷文字、抽獎規則與 NFT 掛載內容。"
+        },
+        "analytics": {
+          "title": "分析儀表板",
+          "desc": "多維度分析儀表板：視覺化呈現產品被掃描的頻率、區域與用戶分佈。"
+        },
+        "rewards": { "title": "獎勵管理", "desc": "O2O 獎勵策略配置：設定點數取得條件、抽獎機率與促銷規則。" },
+        "account": { "title": "帳號管理", "desc": "權限與帳號管理：細粒度配置商店人員的權限角色與存取限制。" }
+      }
+    },
+    "disclaimer": "本頁面展示的內容為商業專案，相關截圖僅供作品集展示用途。"
   }
 }
 
