--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -1,6 +1,7 @@
 {
   "sourceCode": "Source Code",
   "storeLink": "Store",
-  "projectDemo": "Project Demo"
+  "projectDemo": "Project Demo",
+  "keyContributions": "Key Contributions"
 }
 
