--- a/public/locales/zh/projects/berify.json
+++ b/public/locales/zh/projects/berify.json
@@ -1,104 +1,94 @@
 {
   "shortDesc": "協助商家管理商品與會員，透過 Web3 提供可驗證的數位資產與行銷工具。",
   "technologies": ["React Native", "Swift App Clips", "Next.js", "Node.js", "Prisma", "Shopify API", "Web3"],
-  "role": "核心開發 · React Native 主應用",
+  "role": "Senior Full-Stack Developer",
   "achievements": [],
-  "fullDesc": "Web3 智慧零售完整生態系統。商家透過後台管理與分析商品，消費者掃描產品標籤以解鎖商品資訊、特別促銷、NFT 和贈品功能，並整合第三方錢包查看資產。\n\n技術棧：React Native 主應用、Swift App Clips 掃描功能、Next.js 後端伺服器與完整 CMS。",
+  "fullDesc": "Web3 智慧零售完整生態系統。商家透過後台管理與分析商品，消費者掃描產品標籤以解鎖商品資訊、特別促銷、NFT 和贈品功能，並整合第三方錢包查看資產。",
   "detail": {
     "hero": {
       "title": "Berify",
-      "tagline": "Web3 賦能的 O2O 智慧零售平台",
-      "description": "連接實體商品與數位資產的商業級 Web3 解決方案。透過 NFC 驗證與行銷自動化，打造完整的線上線下零售生態系。",
-      "badge": "任職時間：1.5 年（2023 - 2024）",
+      "tagline": "Senior Full-Stack Developer · Deep Engineering",
+      "description": "驗證完整的全端功能交付模式：從資料庫 Schema 設計，經由安全 API Gateway，到最終 Mobile UI 呈現。",
       "statusBadge": "正式上線中"
-    },
-    "context": {
-      "title": "🌐 專案背景",
-      "description": "Berify 是一個 Web3 賦能的 O2O 零售生態系統，具備 NFC 驗證與行銷自動化功能。系統採用分散式架構：",
-      "architecture": [
-        { "name": "Main Web", "tech": "Next.js", "desc": "主要後端與 CMS" },
-        { "name": "Task Queue", "tech": "Node.js", "desc": "非同步任務處理" },
-        { "name": "WebSocket", "tech": "Socket.io", "desc": "即時通知" }
-      ]
     },
     "overview": {
       "duration": "任職時間：1.5 年（2023 - 2024）",
-      "team": "核心開發（全端）",
+      "team": "Senior Developer (Full Lifecycle)",
       "projectType": "商業產品",
-      "mainTechs": ["React Native", "Next.js", "Node.js", "Prisma", "Shopify API", "Socket.io"],
+      "mainTechs": ["React Native", "Next.js", "Node.js", "Prisma", "Shopify API", "Arbitrum Nova"],
       "platforms": ["iOS", "Android", "Web"]
     },
     "metrics": {
-      "title": "📊 專案規模指標",
+      "title": "📊 工程貢獻指標",
       "items": [
-        { "value": "114", "label": "DB Migrations", "desc": "資料庫版本遷移" },
-        { "value": "34", "label": "API Modules", "desc": "後端 API 模組" },
-        { "value": "10+", "label": "Integrations", "desc": "第三方服務整合" }
+        { "value": "1,026+", "label": "App Commits", "desc": "行動端核心代碼" },
+        { "value": "213+", "label": "API Commits", "desc": "Web3 後端與微服務" },
+        { "value": "76k+", "label": "Lines of Code", "desc": "高質量功能交付" },
+        { "value": "100%", "label": "Lifecycle", "desc": "Schema → API → UI" }
+      ]
+    },
+    "qualityMetrics": {
+      "title": "🛡️ 量化工程品質",
+      "items": [
+        { "icon": "📝", "label": "Type Safety", "desc": "嚴格 TypeScript 泛型回傳型別 (Contract Compliance)" },
+        { "icon": "🔒", "label": "Security", "desc": "Zero-IDOR API 設計，嚴格授權守衛" },
+        { "icon": "🔄", "label": "Maintainability", "desc": "集中式錯誤處理與元件可重用模式 (MenuButton Pattern)" }
       ]
     },
     "challenges": [
       {
-        "title": "大規模 Schema 工程",
-        "badge": "114 Migrations",
-        "achievement": "管理 **114 次資料庫遷移**，設計包含 **50+ 資料表**的核心 Schema",
+        "title": "防禦性程式設計與穩健性",
+        "badge": "Robustness",
+        "achievement": "為硬體互動 (NFC) 實作穩健的錯誤邊界處理",
         "details": [
-          "使用 Prisma/MySQL 實作複雜關聯結構",
-          "NFT 鑄造與產品綁定的資料模型",
-          "Shopify 商品同步與庫存追蹤",
-          "多層級商家角色與權限系統"
+          "使用 Navigation State 進行非崩潰的錯誤傳播",
+          "確保網路失敗時的 UI 一致性",
+          "`try-finally` 確保掃描狀態的原子性重置"
         ],
-        "icon": "🗄️"
+        "icon": "🛡️",
+        "codeSnippet": {
+          "title": "NFC Exception Handling",
+          "language": "typescript",
+          "code": "const handleScan = async () => {\n  setScanning(true);\n  try {\n    await NfcManager.requestTechnology(...);\n    // ... processing logic\n  } catch (e) {\n    navigation.navigate('ErrorScreen', { error: e });\n  } finally {\n    setScanning(false); // Atomic reset\n    NfcManager.cancelTechnologyRequest();\n  }\n};"
+        }
       },
       {
-        "title": "高可靠微服務",
-        "badge": "Berify-Queue",
-        "achievement": "設計並實作 **Berify-Queue** 服務，處理非同步推播通知與 NFT 分配任務",
-        "details": [
-          "狀態機模式：waiting → processing → processed",
-          "確保任務原子性，防止重複執行",
-          "支援推播排程與批次處理",
-          "錯誤重試與死信佇列機制"
-        ],
-        "icon": "⚙️"
+        "title": "區塊鏈高延遲操作的 UX 優化",
+        "badge": "Optimistic UI",
+        "achievement": "為區塊鏈資產轉移設計 Optimistic UI 模式",
+        "details": ["實作原子性 UI 鎖定機制", "`try-finally` 區塊中的狀態恢復", "降低感知延遲並防止競態條件"],
+        "icon": "⚡",
+        "codeSnippet": {
+          "title": "Optimistic UI Lock",
+          "language": "typescript",
+          "code": "const claimNft = async () => {\n  setUiLocked(true);\n  setClaimStatus('pending');\n  try {\n    await blockchainService.claim(nftId);\n    setClaimStatus('success');\n  } catch {\n    setClaimStatus('failed');\n    revertOptimisticChanges();\n  } finally {\n    setUiLocked(false);\n  }\n};"
+        }
       },
       {
-        "title": "生態系互通性",
-        "badge": "Shopify & Web3",
-        "achievement": "建立與 **Shopify API** (O2O 電商) 及 **Arbitrum Nova** (NFT 自動分發) 的深度整合",
+        "title": "端到端功能交付 (IDV Flow)",
+        "badge": "E2E Ownership",
+        "achievement": "架構完整的身份驗證 (IDV) 狀態系統",
         "details": [
-          "Shopify 折扣碼生成與兌換流程",
-          "AWS SNS 跨平台推播整合",
-          "Socket.io 即時商家通知",
-          "Web3 錢包連接與 NFT 領取"
+          "演進 **Prisma Schema** 設計 (idvStatus enum)",
+          "建構**安全 Next.js API Gateway**，防止 IDOR 攻擊",
+          "交付最終 Mobile UI 狀態追蹤介面"
         ],
-        "icon": "🔗"
+        "icon": "🔗",
+        "codeSnippet": {
+          "title": "Secure API Upsert",
+          "language": "typescript",
+          "code": "// Next.js API Route (IDOR Prevention)\nexport async function PATCH(req: Request) {\n  const session = await getServerSession();\n  const userId = session.user.id; // From token, NOT body\n  \n  return prisma.userProfile.upsert({\n    where: { userId }, // Auth-derived ID\n    update: { idvStatus: 'verified' },\n    create: { userId, idvStatus: 'pending' },\n  });\n}"
+        }
       }
     ],
-    "performance": {
-      "title": "📱 前端效能優化",
-      "description": "除了後端系統開發，同時負責 React Native App 的效能調校",
-      "method": "使用 **Android Studio Profiler** 進行記憶體與渲染分析",
-      "result": "降低記憶體佔用，提升渲染效能 **10-15%**"
-    },
     "architectureFlow": {
-      "title": "🏗️ 系統架構流程",
-      "nodes": {
-        "app": { "label": "Consumer App", "tech": "React Native" },
-        "merchant": { "label": "Merchant Dashboard", "tech": "Next.js" },
-        "web": { "label": "Main Backend", "tech": "Next.js API" },
-        "queue": { "label": "Task Queue", "tech": "Node.js" },
-        "db": { "label": "Database", "tech": "MySQL" },
-        "shopify": { "label": "Shopify", "tech": "REST API" },
-        "sns": { "label": "AWS SNS", "tech": "Push" },
-        "web3": { "label": "Arbitrum Nova", "tech": "NFT" }
-      },
-      "flows": [
-        "App → Web: 產品驗證 / 獎勵領取",
-        "Merchant → Web: 產品管理 / 活動設定",
-        "Web → Queue: 非同步任務派發",
-        "Queue → SNS: 推播通知",
-        "Queue → Web3: NFT 鑄造",
-        "Web → Shopify: 折扣同步"
+      "title": "🏗️ 系統開發足跡",
+      "steps": [
+        { "step": "1", "title": "App (NFC)", "desc": "1000+ Commits", "metric": "Highest Impact" },
+        { "step": "2", "title": "Web3 API", "desc": "200+ Commits", "metric": "Core Logic" },
+        { "step": "3", "title": "Async Queue", "desc": "Task Processing", "metric": "Stability" },
+        { "step": "4", "title": "AWS SNS", "desc": "Integration Owner", "metric": "Infra" },
+        { "step": "5", "title": "Arbitrum", "desc": "Smart Contract", "metric": "Web3" }
       ]
     },
     "gallery": {
@@ -107,37 +97,26 @@
         "merchantDashboard": "商家管理"
       },
       "consumerApp": {
-        "home": { "title": "首頁", "desc": "NFC 產品驗證入口：透過感應 NFC 標籤即時啟動產品驗證流程。" },
-        "productDetail": { "title": "產品詳情", "desc": "數位資產與詳情：查看產品資訊與掛載的 NFT 資產。" },
-        "productDetailChat": {
-          "title": "品牌互動",
-          "desc": "品牌即時互動：透過 WebSocket 實作與品牌方的即時互動聊天室。"
-        },
-        "rewards": { "title": "獎勵中心", "desc": "Shopify 獎勵同步：整合點數系統並自動同步 Shopify 商店折扣碼。" },
-        "rewardsDetail": {
-          "title": "獎勵詳情",
-          "desc": "獎勵兌換詳情：查看獎勵詳細說明，並將累積點數兌換為實體商店或 Shopify 的專屬折扣碼。"
-        },
-        "notifications": { "title": "通知中心", "desc": "個人化推播中心：由 AWS SNS 驅動的活動通知與產品動態推播。" },
-        "profile": {
-          "title": "個人檔案",
-          "desc": "個人帳戶中心：管理用戶資訊、安全設定，並整合個人收藏與掃描偏好設定。"
-        },
-        "scanHistory": { "title": "掃描紀錄", "desc": "足跡與收藏：記錄所有曾互動過的產品標籤與驗證歷程。" }
+        "home": { "title": "首頁", "desc": "NFC 產品驗證入口" },
+        "productDetail": { "title": "產品詳情", "desc": "區塊鏈驗證資訊與 NFT 資產" },
+        "chat": { "title": "即時互動", "desc": "WebSocket 品牌聊天室" },
+        "rewards": { "title": "獎勵中心", "desc": "Shopify 折扣碼同步" },
+        "rewardsDetail": { "title": "獎勵詳情", "desc": "點數兌換專屬折扣" },
+        "notifications": { "title": "通知中心", "desc": "AWS SNS 推播" },
+        "profile": { "title": "個人檔案", "desc": "個人檔案" },
+        "scanHistory": { "title": "掃描歷程", "desc": "產品互動記錄" }
       },
       "merchantDashboard": {
-        "inventory": { "title": "庫存管理", "desc": "產品標籤庫存管理：管理商家旗下所有實體商品對應的數位標籤。" },
-        "experience": { "title": "體驗管理", "desc": "體驗與分店管理：配置跨分店的商品互動內容與數位體驗邏輯。" },
-        "experienceDetail": {
-          "title": "體驗詳情",
-          "desc": "數位體驗客製化詳情：細粒度配置標籤掃描後的互動邏輯，包含自訂動畫、促銷文字、抽獎規則與 NFT 掛載內容。"
-        },
-        "analytics": {
-          "title": "分析儀表板",
-          "desc": "多維度分析儀表板：視覺化呈現產品被掃描的頻率、區域與用戶分佈。"
-        },
-        "rewards": { "title": "獎勵管理", "desc": "O2O 獎勵策略配置：設定點數取得條件、抽獎機率與促銷規則。" },
-        "account": { "title": "帳號管理", "desc": "權限與帳號管理：細粒度配置商店人員的權限角色與存取限制。" }
+        "dashboard": { "title": "儀表板", "desc": "多維度分析" },
+        "inventory": { "title": "庫存管理", "desc": "數位標籤管理" },
+        "experience": { "title": "體驗管理", "desc": "跨分店數位體驗" },
+        "experienceDetail": { "title": "體驗詳情", "desc": "抽獎規則與 NFT 內容" },
+        "rewards": { "title": "獎勵策略", "desc": "O2O 促銷規則" },
+        "account": { "title": "權限管理", "desc": "細粒度角色與存取" }
+      },
+      "thirdParty": {
+        "shopify": "整合 Shopify API 實現 O2O 同步",
+        "arbitrum": "Arbitrum Nova 低延遲 NFT 分發"
       }
     },
     "disclaimer": "本頁面展示的內容為商業專案，相關截圖僅供作品集展示用途。"
